--- a/index.html
+++ b/index.html
@@ -858,10 +858,9 @@
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
                             <div class="widget about-widget">
                                 <div class="logo widget-title">
-                                    <img src="assets/images/logo-2.svg" alt="blog">
+                                    <img src="assets/images/logo/Orange NLC.png" alt="blog">
                                 </div>
-                                <p>Logistika excels in transport and logistics solutions with global service
-                                    capabilities.</p>
+                                <p>Logistics & Cargo Service</p>
                                 <ul>
                                     <li>
                                         <div class="icon"><svg width="23" height="28" viewBox="0 0 23 28" fill="none">
@@ -914,12 +913,9 @@
                                     <h3>Services</h3>
                                 </div>
                                 <ul>
-                                    <li><a href="services-single.html">Electronics Industry</a></li>
-                                    <li><a href="services-single.html">Industrial & Manufacturing</a></li>
-                                    <li><a href="services-single.html">Semicon & Solar</a></li>
-                                    <li><a href="services-single.html">Oil & Gas Cargo</a></li>
-                                    <li><a href="services-single.html">ship & cargo services</a></li>
-                                    <li><a href="services-single.html">Maritime transportation</a></li>
+                                    <li><a href="air-transport.html">Air Freight</a></li>
+                                    <li><a href="ocean-transport.html">Ocean Freight</a></li>
+                                   
                                 </ul>
                             </div>
                         </div>
@@ -929,11 +925,11 @@
                                     <h3>Useful links</h3>
                                 </div>
                                 <ul>
-                                    <li><a href="services-single.html">How it Works</a></li>
-                                    <li><a href="services-single.html">Help Link</a></li>
-                                    <li><a href="services-single.html">Terms & Conditions</a></li>
-                                    <li><a href="services-single.html">Contact Us</a></li>
-                                    <li><a href="services-single.html">Privacy Policy</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="services.html">Services</a></li>
+                                    <li><a href="shop.html">Shop Online</a></li>
+                                    <li><a href="contact.html">Contact Us</a></li>
+                                    <li><a href="about.html">About Us</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -961,8 +957,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col col-xs-12">
-                            <p class="copyright"> &copy; 2024 <a href="index.html">wpOcean</a> - Logistics service. All
-                                rights reserved.</p>
+                            <p class="copyright"> &copy; 2025 <a href="index.html">Netline Cargo Ltd</a> All
+                                rights reserved. | Powered By  </p>  <a href="https://www.axetech.africa/">Axetech Africa</a>
                         </div>
                     </div>
                 </div>
