--- a/index-2.html
+++ b/index-2.html
@@ -94,8 +94,8 @@
                             </div>
                             <div class="col-lg-2 col-md-6 col-6">
                                 <div class="navbar-header">
-                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo-2.svg"
-                                            alt=""></a>
+                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo/Orange NLC.png"
+                                            alt="logo netline cargo"></a>
                                 </div>
                             </div>
                             <div class="col-lg-7 col-md-1 col-1">
@@ -432,9 +432,7 @@
         <!-- start of wpo-request-quate-section -->
         <section class="wpo-request-quate-section">
             <div class="container">
-                <div class="title">
-                    <h1>Transport</h1>
-                </div>
+               
                 <div class="tab-wrap">
                     <div class="tab">
                         <button class="tablinks" onclick="openTab(event, 'Tab1')">Request a quate</button>
@@ -577,10 +575,7 @@
                             </div>
                             <div class="video-content">
                                 <img src="assets/images/video-bg-1.jpg" alt="">
-                                <div class="video-holder">
-                                    <a href="https://www.youtube.com/embed/7Jv48RQ_2gk" class="video-btn"
-                                        data-type="iframe"><i class="flaticon-play-button-arrowhead"></i></a>
-                                </div>
+                               
                             </div>
                         </div>
                     </div>
@@ -928,7 +923,7 @@
         <!-- start of wpo-project-testimonial-section -->
         <div class="wpo-project-testimonial-section section-padding">
             <section class="wpo-project-section-s2">
-                <div class="container">
+                <!-- <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-6 col-12">
                             <div class="wpo-section-title">
@@ -938,8 +933,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="project-wrap">
+                </div> -->
+                <!-- <div class="project-wrap">
                     <div class="row">
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="project-card-s2">
@@ -990,7 +985,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </section>
 
             <Section class="wpo-testimonial-section-s2">
@@ -1000,24 +995,24 @@
                             <div class="item">
                                 <span class="feedback"><i class="flaticon-mark"></i></span>
                                 <img src="assets/images/testimonial/3.jpg" alt="">
-                                <ul>
+                                <!-- <ul>
                                     <li><i class="flaticon-star"></i></li>
                                     <li><i class="flaticon-star"></i></li>
                                     <li><i class="flaticon-star"></i></li>
                                     <li><i class="flaticon-star"></i></li>
                                     <li><i class="flaticon-star"></i></li>
-                                </ul>
+                                </ul> -->
                             </div>
                             <div class="item">
                                 <span class="feedback"><i class="flaticon-mark"></i></span>
                                 <img src="assets/images/testimonial/4.jpg" alt="">
-                                <ul>
+                                <!-- <ul>
                                     <li><i class="flaticon-star"></i></li>
                                     <li><i class="flaticon-star"></i></li>
                                     <li><i class="flaticon-star"></i></li>
                                     <li><i class="flaticon-star"></i></li>
                                     <li><i class="flaticon-star"></i></li>
-                                </ul>
+                                </ul> -->
                             </div>
                         </div>
                         <div class="content-wrap">
