--- a/index-3.html
+++ b/index-3.html
@@ -59,8 +59,8 @@
                             </div>
                             <div class="col-lg-2 col-md-6 col-6">
                                 <div class="navbar-header">
-                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo.svg"
-                                            alt=""></a>
+                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo/Orange NLC.png"
+                                            alt="netline cargo logo"></a>
                                 </div>
                             </div>
                             <div class="col-lg-7 col-md-1 col-1">
