--- a/index.html
+++ b/index.html
@@ -99,17 +99,16 @@
                                         <li class="menu-item-has-children">
                                             <a href="#">Services </a>
                                             <ul class="sub-menu">
-                                                <li><a href="services.html">Services </a></li>
+                                                <li><a href="services.html">All Services </a></li>
                                                 <li><a href="air-transport.html">Air transport</a></li>
                                                 <li><a href="ocean-transport.html">Ocean transport</a></li>
-                                                <li><a href="online.html">Assited Buying</a></li>
-
+                                                <li><a href="online.html">Online Buying</a></li>
                                             </ul>
                                         </li>
-                                        <li ><a href="shop.html">Shop Online</a></li>
+                                        <li><a href="shop.html">Shop Online</a></li>
                                         <li><a href="about.html">About </a></li>
 
-                                        <li><a href="blog.html">News</a></li>
+                                        <li><a href="contact.html">News</a></li>
 
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
@@ -129,7 +128,7 @@
                                     </a>
                                     
                                     <div class="close-form">
-                                        <a class="theme-btn" href="contact.html">Get a quote <i
+                                        <a class="theme-btn" href="pricing.html">Get a quote <i
                                                 class="flaticon-next"></i></a>
                                     </div>
                                 </div>
@@ -146,7 +145,7 @@
             <div class="hero-slider">
                 <div class="slider-item">
                     <div class="bg-image">
-                        <img class="animated" src="assets/images/netline/3d-airplanes-flying-around-globe-with-map-pointer-2024-10-18-07-10-15-utc.webp" alt=""
+                        <img class="animated" src="assets/images/netline/3d-airplanes-flying-around-globe-with-map-pointer-2024-10-18-07-10-15-utc.webp" alt="air freight"
                             data-animation-in="zoomInImage">
                     </div>
                     <div class="container">
@@ -196,7 +195,7 @@
                 </div>
                 <div class="slider-item">
                     <div class="bg-image">
-                        <img class="animated" src="assets/images/netline/container-ship-floating-in-sea-2023-11-27-05-13-32-utc.webp" alt=""
+                        <img class="animated" src="assets/images/netline/vehicles-carrier-in-the-sea-2023-11-27-05-14-52-utc.webp" alt="ocean freight"
                             data-animation-in="zoomInImage">
                     </div>
                     <div class="container">
@@ -923,6 +922,7 @@
                                 <ul>
                                     <li><a href="air-transport.html">Air Freight</a></li>
                                     <li><a href="ocean-transport.html">Ocean Freight</a></li>
+                                    <li><a href="online.html">Online Buying</a></li>
                                    
                                 </ul>
                             </div>
