--- a/shop.html
+++ b/shop.html
@@ -93,36 +93,31 @@
                             </div>
                             <div class="col-lg-2 col-md-6 col-6">
                                 <div class="navbar-header">
-                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo.svg"
-                                            alt=""></a>
+                                  <a class="navbar-brand" href="index.html"><img src="assets/images/logo/Black NLC.png" alt="netline cargo logo"></a>
+
                                 </div>
                             </div>
                             <div class="col-lg-7 col-md-1 col-1">
                                 <div id="navbar" class="collapse navbar-collapse navigation-holder">
                                     <button class="menu-close"><i class="ti-close"></i></button>
                                     <ul class="nav navbar-nav mb-2 mb-lg-0">
-                                        <li class="menu-item-has-children"><a href="index.html">Home</a></li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Services </a>
-                                            <ul class="sub-menu">
-                                                <li><a href="services.html">Services </a></li>
-                                                <li><a href="air-transport.html">Air transport</a></li>
-                                                <li><a href="ocean-transport.html">Ocean transport</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Shop Online</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="shop.html">Shop</a></li>
+                                      <li class="menu-item-has-children"><a href="index.html">Home</a></li>
+                                      <li class="menu-item-has-children">
+                                          <a href="#">Services </a>
+                                          <ul class="sub-menu">
+                                              <li><a href="services.html">All Services </a></li>
+                                              <li><a href="air-transport.html">Air transport</a></li>
+                                              <li><a href="ocean-transport.html">Ocean transport</a></li>
+                                              <li><a href="online.html">Online Buying</a></li>
+                                          </ul>
+                                      </li>
+                                      <li><a href="shop.html">Shop Online</a></li>
+                                      <li><a href="about.html">About </a></li>
 
-                                            </ul>
-                                        </li>
-                                        <li><a href="about.html">About </a></li>
+                                      <li><a href="contact.html">News</a></li>
 
-                                        <li><a href="contact.html">News</a></li>
-
-                                        <li><a href="contact.html">Contact</a></li>
-                                    </ul>
+                                      <li><a href="contact.html">Contact</a></li>
+                                  </ul>
                                 </div>
                                 <!-- end of nav-collapse -->
                             </div>
@@ -819,110 +814,103 @@
 
         <!-- start of wpo-site-footer-section -->
         <footer class="wpo-site-footer-s2">
-            <div class="wpo-upper-footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
-                            <div class="widget address-widget">
-                                <div class="widget-title">
-                                    <h3>Address</h3>
-                                </div>
-                                <p>570 8th Ave, New York,NY 10018
-                                    United States</p>
-                                <h4>Opening Hours</h4>
-                                <ul>
-                                    <li>9.30am – 6.30pm</li>
-                                    <li>Monday to Friday</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
-                            <div class="widget link-widget">
-                                <div class="widget-title">
-                                    <h3>Services</h3>
-                                </div>
-                                <ul>
-                                    <li><a href="services-single.html">Electronics Industry</a></li>
-                                    <li><a href="services-single.html">Industrial & Manufacturing</a></li>
-                                    <li><a href="services-single.html">Semicon & Solar</a></li>
-                                    <li><a href="services-single.html">Oil & Gas Cargo</a></li>
-                                    <li><a href="services-single.html">ship & cargo services</a></li>
-                                    <li><a href="services-single.html">Maritime transportation</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
-                            <div class="widget link-widget">
-                                <div class="widget-title">
-                                    <h3>Useful links</h3>
-                                </div>
-                                <ul>
-                                    <li><a href="services-single.html">How it Works</a></li>
-                                    <li><a href="services-single.html">Help Link</a></li>
-                                    <li><a href="services-single.html">Terms & Conditions</a></li>
-                                    <li><a href="services-single.html">Contact Us</a></li>
-                                    <li><a href="services-single.html">Privacy Policy</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
-                            <div class="widget newsletter-widget">
-                                <div class="widget-title">
-                                    <h3>newsletter</h3>
-                                </div>
-                                <div class="newsletter">
-                                    <form class="form-fild">
-                                        <input class="fild" type="email" placeholder="Enter Email Adress">
-                                        <button type="submit"><i class="flaticon-arrowhead-up"></i></button>
-                                        <div class="terms">
-                                            <input type="checkbox" id="Insurance">
-                                            <label for="Insurance">I agree all your <a href="#">terms</a> and
-                                                policies</label>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="wpo-lower-footer">
-                <div class="container">
-                    <div class="row g-0 align-items-center">
-                        <div class="col col-lg-2 col-12">
-                            <div class="logo">
-                                <img src="assets/images/logo-2.svg" alt="blog">
-                            </div>
-                        </div>
-                        <div class="col col-lg-6 col-12">
-                            <p class="copyright"> &copy; 2024 <a href="index.html">wpOcean</a> - Logistics service. All
-                                rights reserved.</p>
-                        </div>
-                        <div class="col col-lg-4 col-12">
-                            <ul>
-                                <li><a href="#"><img src="assets/images/banck/1.png" alt=""></a></li>
-                                <li><a href="#"><img src="assets/images/banck/2.png" alt=""></a></li>
-                                <li><a href="#"><img src="assets/images/banck/3.png" alt=""></a></li>
-                                <li><a href="#"><img src="assets/images/banck/4.png" alt=""></a></li>
-                                <li><a href="#"><img src="assets/images/banck/5.png" alt=""></a></li>
-                                <li><a href="#"><img src="assets/images/banck/6.png" alt=""></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="bg-image">
-                <img src="assets/images/footer-bg-s2.jpg" alt="">
-            </div>
-            <div class="shape">
-                <svg width="191" height="208" viewBox="0 0 191 208" fill="none">
-                    <path d="M125.53 208.291H118.13L0 12.271V0.00102234L125.53 208.291Z" fill="white" />
-                    <path d="M0 43.1711L99.93 209.121H0V43.1711Z" fill="#FF7236" />
-                    <path d="M190.33 209.121H138.45L68.9102 93.7311H120.79L190.33 209.121Z" fill="#144754" />
-                    <path d="M98.0897 69.1602H72.8097L38.9297 12.9402H64.2097L98.0897 69.1602Z" fill="#FF7236" />
-                </svg>
-            </div>
-        </footer>
+          <div class="wpo-upper-footer">
+              <div class="container">
+                  <div class="row">
+                      <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
+                          <div class="widget address-widget">
+                              <div class="widget-title">
+                                  <h3>Address</h3>
+                              </div>
+                              <p>570 8th Ave, New York,NY 10018
+                                  United States</p>
+                              
+                          </div>
+                      </div>
+                      <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
+                          <div class="widget link-widget">
+                              <div class="widget-title">
+                                  <h3>Services</h3>
+                              </div>
+                              <ul>
+                                  <li><a href="air-transport.html">Air Freight</a></li>
+                                  <li><a href="ocean-transport.html">Ocean Freight</a></li>
+                                  <li><a href="online.html">Online Buying</a></li>
+                              </ul>
+                          </div>
+                      </div>
+                      <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
+                          <div class="widget link-widget">
+                              <div class="widget-title">
+                                  <h3>Quick links</h3>
+                              </div>
+                              <ul>
+                                  <li><a href="index.html">Home</a></li>
+                                  <li><a href="services.html">Services</a></li>
+                                  <li><a href="shop.html">Shop Online</a></li>
+                                  <li><a href="contact.html">Contact Us</a></li>
+                                  <li><a href="about.html">About Us</a></li>
+                              </ul>
+                          </div>
+                      </div>
+                      <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
+                          <div class="widget newsletter-widget">
+                              <div class="widget-title">
+                                  <h3>newsletter</h3>
+                              </div>
+                              <div class="newsletter">
+                                  <form class="form-fild">
+                                      <input class="fild" type="email" placeholder="Enter Email Adress">
+                                      <button type="submit"><i class="flaticon-arrowhead-up"></i></button>
+                                      <div class="terms">
+                                          <input type="checkbox" id="Insurance">
+                                          <label for="Insurance">I agree all your <a href="#">terms</a> and
+                                              policies</label>
+                                      </div>
+                                  </form>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="wpo-lower-footer">
+              <div class="container">
+                  <div class="row g-0 align-items-center">
+                      <div class="col col-lg-2 col-12">
+                          <div class="logo">
+                              <img src="assets/images/logo/Black NLC.png" alt="blog">
+                          </div>
+                      </div>
+                      <div class="col col-lg-6 col-12">
+                          <p class="copyright"> &copy; 2025 <a href="index.html">Netline Cargo Ltd</a> All
+                              rights reserved. | Powered By  </p>  <a href="https://www.axetech.africa/">Axetech Africa</a>
+                      </div>
+                      <div class="col col-lg-4 col-12">
+                          <ul>
+                              <li><a href="#"><img src="assets/images/banck/1.png" alt=""></a></li>
+                              <li><a href="#"><img src="assets/images/banck/2.png" alt=""></a></li>
+                              <li><a href="#"><img src="assets/images/banck/3.png" alt=""></a></li>
+                              <li><a href="#"><img src="assets/images/banck/4.png" alt=""></a></li>
+                              <li><a href="#"><img src="assets/images/banck/5.png" alt=""></a></li>
+                              <li><a href="#"><img src="assets/images/banck/6.png" alt=""></a></li>
+                          </ul>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="bg-image">
+              <img src="assets/images/footer-bg-s2.jpg" alt="">
+          </div>
+          <div class="shape">
+              <svg width="191" height="208" viewBox="0 0 191 208" fill="none">
+                  <path d="M125.53 208.291H118.13L0 12.271V0.00102234L125.53 208.291Z" fill="white" />
+                  <path d="M0 43.1711L99.93 209.121H0V43.1711Z" fill="#FF7236" />
+                  <path d="M190.33 209.121H138.45L68.9102 93.7311H120.79L190.33 209.121Z" fill="#144754" />
+                  <path d="M98.0897 69.1602H72.8097L38.9297 12.9402H64.2097L98.0897 69.1602Z" fill="#FF7236" />
+              </svg>
+          </div>
+      </footer>
         <!-- end of wpo-site-footer-section -->
 
 
