--- a/team.html
+++ b/team.html
@@ -89,8 +89,8 @@
                             </div>
                             <div class="col-lg-2 col-md-6 col-6">
                                 <div class="navbar-header">
-                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo.svg"
-                                            alt=""></a>
+                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo/Black NLC.png" alt="netline cargo logo"></a>
+
                                 </div>
                             </div>
                             <div class="col-lg-7 col-md-1 col-1">
@@ -101,18 +101,13 @@
                                         <li class="menu-item-has-children">
                                             <a href="#">Services </a>
                                             <ul class="sub-menu">
-                                                <li><a href="services.html">Services </a></li>
+                                                <li><a href="services.html">All Services </a></li>
                                                 <li><a href="air-transport.html">Air transport</a></li>
                                                 <li><a href="ocean-transport.html">Ocean transport</a></li>
+                                                <li><a href="online.html">Online Buying</a></li>
                                             </ul>
                                         </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Shop Online</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="shop.html">Shop</a></li>
-                                                
-                                            </ul>
-                                        </li>
+                                        <li><a href="shop.html">Shop Online</a></li>
                                         <li><a href="about.html">About </a></li>
 
                                         <li><a href="contact.html">News</a></li>
