--- a/tracking.html
+++ b/tracking.html
@@ -89,8 +89,8 @@
                             </div>
                             <div class="col-lg-2 col-md-6 col-6">
                                 <div class="navbar-header">
-                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo.svg"
-                                            alt=""></a>
+                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo/Black NLC.png" alt="netline cargo logo"></a>
+
                                 </div>
                             </div>
                             <div class="col-lg-7 col-md-1 col-1">
@@ -101,18 +101,13 @@
                                         <li class="menu-item-has-children">
                                             <a href="#">Services </a>
                                             <ul class="sub-menu">
-                                                <li><a href="services.html">Services </a></li>
+                                                <li><a href="services.html">All Services </a></li>
                                                 <li><a href="air-transport.html">Air transport</a></li>
                                                 <li><a href="ocean-transport.html">Ocean transport</a></li>
+                                                <li><a href="online.html">Online Buying</a></li>
                                             </ul>
                                         </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Shop Online</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="shop.html">Shop</a></li>
-                                                
-                                            </ul>
-                                        </li>
+                                        <li><a href="shop.html">Shop Online</a></li>
                                         <li><a href="about.html">About </a></li>
 
                                         <li><a href="contact.html">News</a></li>
@@ -295,11 +290,7 @@
                                 </div>
                                 <p>570 8th Ave, New York,NY 10018
                                     United States</p>
-                                <h4>Opening Hours</h4>
-                                <ul>
-                                    <li>9.30am – 6.30pm</li>
-                                    <li>Monday to Friday</li>
-                                </ul>
+                                
                             </div>
                         </div>
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
@@ -308,26 +299,23 @@
                                     <h3>Services</h3>
                                 </div>
                                 <ul>
-                                    <li><a href="services-single.html">Electronics Industry</a></li>
-                                    <li><a href="services-single.html">Industrial & Manufacturing</a></li>
-                                    <li><a href="services-single.html">Semicon & Solar</a></li>
-                                    <li><a href="services-single.html">Oil & Gas Cargo</a></li>
-                                    <li><a href="services-single.html">ship & cargo services</a></li>
-                                    <li><a href="services-single.html">Maritime transportation</a></li>
+                                    <li><a href="air-transport.html">Air Freight</a></li>
+                                    <li><a href="ocean-transport.html">Ocean Freight</a></li>
+                                    <li><a href="online.html">Online Buying</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
                             <div class="widget link-widget">
                                 <div class="widget-title">
-                                    <h3>Useful links</h3>
+                                    <h3>Quick links</h3>
                                 </div>
                                 <ul>
-                                    <li><a href="services-single.html">How it Works</a></li>
-                                    <li><a href="services-single.html">Help Link</a></li>
-                                    <li><a href="services-single.html">Terms & Conditions</a></li>
-                                    <li><a href="services-single.html">Contact Us</a></li>
-                                    <li><a href="services-single.html">Privacy Policy</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="services.html">Services</a></li>
+                                    <li><a href="shop.html">Shop Online</a></li>
+                                    <li><a href="contact.html">Contact Us</a></li>
+                                    <li><a href="about.html">About Us</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -357,12 +345,12 @@
                     <div class="row g-0 align-items-center">
                         <div class="col col-lg-2 col-12">
                             <div class="logo">
-                                <img src="assets/images/logo-2.svg" alt="blog">
+                                <img src="assets/images/logo/Black NLC.png" alt="blog">
                             </div>
                         </div>
                         <div class="col col-lg-6 col-12">
-                            <p class="copyright"> &copy; 2024 <a href="index.html">wpOcean</a> - Logistics service. All
-                                rights reserved.</p>
+                            <p class="copyright"> &copy; 2025 <a href="index.html">Netline Cargo Ltd</a> All
+                                rights reserved. | Powered By  </p>  <a href="https://www.axetech.africa/">Axetech Africa</a>
                         </div>
                         <div class="col col-lg-4 col-12">
                             <ul>
