--- a/online.html
+++ b/online.html
@@ -105,82 +105,29 @@
                             </div>
                             <div class="col-lg-2 col-md-6 col-6">
                                 <div class="navbar-header">
-                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo.svg"
-                                            alt=""></a>
+                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo/Black NLC.png" alt="netline cargo logo"></a>
+
                                 </div>
                             </div>
                             <div class="col-lg-7 col-md-1 col-1">
                                 <div id="navbar" class="collapse navbar-collapse navigation-holder">
                                     <button class="menu-close"><i class="ti-close"></i></button>
                                     <ul class="nav navbar-nav mb-2 mb-lg-0">
+                                        <li class="menu-item-has-children"><a href="index.html">Home</a></li>
                                         <li class="menu-item-has-children">
-                                            <a href="#">Home</a>
+                                            <a href="#">Services </a>
                                             <ul class="sub-menu">
-                                                <li><a href="index.html">Home style 1</a></li>
-                                                <li><a href="index-2.html">Home style 2</a></li>
-                                                <li><a href="index-3.html">Home style 3</a></li>
+                                                <li><a href="services.html">All Services </a></li>
+                                                <li><a href="air-transport.html">Air transport</a></li>
+                                                <li><a href="ocean-transport.html">Ocean transport</a></li>
+                                                <li><a href="online.html">Online Buying</a></li>
                                             </ul>
                                         </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Pages</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="about.html">About</a></li>
-                                                <li class="menu-item-has-children">
-                                                    <a href="#">Project</a>
-                                                    <ul class="sub-menu">
-                                                        <li><a href="project.html">Project style 1</a></li>
-                                                        <li><a href="project-2.html">Project style 2</a></li>
-                                                        <li><a href="project-3.html">Project style 3</a></li>
-                                                        <li><a href="project-single.html">Project Single</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="pricing.html">Pricing</a></li>
-                                                <li><a href="tracking.html">Tracking</a></li>
-                                                <li><a href="team.html">Team</a></li>
-                                                <li><a href="faq.html">FAQ</a></li>
-                                                <li><a href="404.html">404 Error</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">services </a>
-                                            <ul class="sub-menu">
-                                                <li><a href="services.html">services </a></li>
+                                        <li><a href="shop.html">Shop Online</a></li>
+                                        <li><a href="about.html">About </a></li>
 
-                                                <li><a href="air-transport.html">air transport</a></li>
-                                                <li><a href="road-transport.html">road transport</a></li>
-                                                <li><a href="ocean-transport.html">ocean transport</a></li>
-                                                <li><a href="train-transport.html">train transport</a></li>
-                                                <li><a href="services-single.html">services Single</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Shop</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="shop.html">Shop</a></li>
-                                                <li><a href="shop-single.html">Shop Single</a></li>
-                                                <li><a href="cart.html">Cart</a></li>
-                                                <li><a href="checkout.html">Checkout</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Blog</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="blog.html">Blog right sidebar</a></li>
-                                                <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
-                                                <li><a href="blog-fullwidth.html">Blog fullwidth</a></li>
-                                                <li class="menu-item-has-children">
-                                                    <a href="#">Blog details</a>
-                                                    <ul class="sub-menu">
-                                                        <li><a href="blog-single.html">Blog details right sidebar</a>
-                                                        </li>
-                                                        <li><a href="blog-single-left-sidebar.html">Blog details left
-                                                                sidebar</a></li>
-                                                        <li><a href="blog-single-fullwidth.html">Blog details
-                                                                fullwidth</a></li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
+                                        <li><a href="contact.html">News</a></li>
+
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </div>
@@ -449,11 +396,7 @@
                                 </div>
                                 <p>570 8th Ave, New York,NY 10018
                                     United States</p>
-                                <h4>Opening Hours</h4>
-                                <ul>
-                                    <li>9.30am – 6.30pm</li>
-                                    <li>Monday to Friday</li>
-                                </ul>
+                                
                             </div>
                         </div>
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
@@ -462,26 +405,23 @@
                                     <h3>Services</h3>
                                 </div>
                                 <ul>
-                                    <li><a href="services-single.html">Electronics Industry</a></li>
-                                    <li><a href="services-single.html">Industrial & Manufacturing</a></li>
-                                    <li><a href="services-single.html">Semicon & Solar</a></li>
-                                    <li><a href="services-single.html">Oil & Gas Cargo</a></li>
-                                    <li><a href="services-single.html">ship & cargo services</a></li>
-                                    <li><a href="services-single.html">Maritime transportation</a></li>
+                                    <li><a href="air-transport.html">Air Freight</a></li>
+                                    <li><a href="ocean-transport.html">Ocean Freight</a></li>
+                                    <li><a href="online.html">Online Buying</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
                             <div class="widget link-widget">
                                 <div class="widget-title">
-                                    <h3>Useful links</h3>
+                                    <h3>Quick links</h3>
                                 </div>
                                 <ul>
-                                    <li><a href="services-single.html">How it Works</a></li>
-                                    <li><a href="services-single.html">Help Link</a></li>
-                                    <li><a href="services-single.html">Terms & Conditions</a></li>
-                                    <li><a href="services-single.html">Contact Us</a></li>
-                                    <li><a href="services-single.html">Privacy Policy</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="services.html">Services</a></li>
+                                    <li><a href="shop.html">Shop Online</a></li>
+                                    <li><a href="contact.html">Contact Us</a></li>
+                                    <li><a href="about.html">About Us</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -511,12 +451,12 @@
                     <div class="row g-0 align-items-center">
                         <div class="col col-lg-2 col-12">
                             <div class="logo">
-                                <img src="assets/images/logo-2.svg" alt="blog">
+                                <img src="assets/images/logo/Black NLC.png" alt="blog">
                             </div>
                         </div>
                         <div class="col col-lg-6 col-12">
-                            <p class="copyright"> &copy; 2024 <a href="index.html">wpOcean</a> - Logistics service. All
-                                rights reserved.</p>
+                            <p class="copyright"> &copy; 2025 <a href="index.html">Netline Cargo Ltd</a> All
+                                rights reserved. | Powered By  </p>  <a href="https://www.axetech.africa/">Axetech Africa</a>
                         </div>
                         <div class="col col-lg-4 col-12">
                             <ul>
