--- a/index.html
+++ b/index.html
@@ -586,12 +586,12 @@
                             logistical support.</h3>
                     </div>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-12">
                         <h4>Bring them together and you overcome the ordinary. <a href="#">View More Features
                                 <span>+</span></a></h4>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- end of wpo-features-section -->
