--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             <h2 class="animated" data-animation-in="fadeInUp">International Logistics</h2>
                             <h3 class="animated" data-animation-in="fadeInUp">Flexible logistic
                                 & cargo service</h3>
-                            <p class="animated" data-animation-in="fadeInUp"> Netline Cargo Limited specializes in international shipping from abroad to Kenya, offering fast, secure, and reliable air and sea freight solutions tailored to your delivery needs.</p>
+                            <p class="animated" data-animation-in="fadeInUp"> Netline Cargo Limited specializes in international shipping from abroad to Kenya, offering fast, secure, and reliable air and ocean freight solutions tailored to your delivery needs.</p>
                             <div class="hero-btn animated" data-animation-in="fadeInUp">
                                 <div class="btn-1">
                                     <a href="services.html" class="theme-btn">All Services</a>
@@ -204,7 +204,7 @@
                             <h2 class="animated" data-animation-in="fadeInUp">International Logistics</h2>
                             <h3 class="animated" data-animation-in="fadeInUp">Flexible logistic
                                 & cargo service</h3>
-                            <p class="animated" data-animation-in="fadeInUp"> Netline Cargo Limited specializes in international shipping from abroad to Kenya, offering fast, secure, and reliable air and sea freight solutions tailored to your delivery needs.
+                            <p class="animated" data-animation-in="fadeInUp"> Netline Cargo Limited specializes in international shipping from abroad to Kenya, offering fast, secure, and reliable air and ocean freight solutions tailored to your delivery needs.
                             </p>
                             <div class="hero-btn animated" data-animation-in="fadeInUp">
                                 <div class="btn-1">
@@ -553,9 +553,9 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-12">
                         <div class="wpo-section-title">
-                            <h2>Trusted transport service</h2>
+                            <h2>Trusted Shipping service</h2>
                             <h3>We provide quick & safe
-                                transportation all over the world</h3>
+                                cargo transportation all over the world</h3>
                         </div>
                     </div>
                 </div>
@@ -849,8 +849,8 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-6 col-12">
-                            <h2>Join Our Newsletter</h2>
-                            <p>We Provide Best Pricing package to grow your lead capture</p>
+                            <h2 class="wpo-section-title">Subscribe To Our Newsletter</h2>
+                            <p>Don’t worry we won't spam you!</p>
                             <form class="newsletter">
                                 <input type="text" class="form-control" placeholder="Email Address" required>
                                 <button type="submit">Subscribe <i class="flaticon-right-arrow"></i></button>
