--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
                 </div>
             </div>
             <div class="bg-image">
-                <img src="assets/images/footer-bg.jpg" alt="">
+                <img src="assets/images/netline/container-ship-floating-in-sea-2023-11-27-05-13-32-utc.webp" alt="">
             </div>
             <div class="shape">
                 <svg width="191" height="208" viewBox="0 0 191 208" fill="none">
