--- a/about.html
+++ b/about.html
@@ -512,7 +512,7 @@
                 </div>
             </div>
             <div class="bg-image">
-                <img src="assets/images/footer-bg-s2.jpg" alt="">
+                <img src="assets/images/netline/cargo-container-ship-top-view-carrying-container-a-2024-12-08-00-45-42-utc.webp" alt="">
             </div>
             <div class="shape">
                 <svg width="191" height="208" viewBox="0 0 191 208" fill="none">
