--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <div id="navbar" class="collapse navbar-collapse navigation-holder">
                                     <button class="menu-close"><i class="ti-close"></i></button>
                                     <ul class="nav navbar-nav mb-2 mb-lg-0">
-                                        <li class="menu-item-has-children"><a href="index.html">Home</a></li>
+                                        <li ><a href="index.html">Home</a></li>
                                         <li class="menu-item-has-children">
                                             <a href="#">Services </a>
                                             <ul class="sub-menu">
@@ -714,7 +714,7 @@
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
                             <div class="widget about-widget">
                                 <div class="logo widget-title">
-                                    <img src="assets/images/logo/Black NLC.png" alt="blog">
+                                    <img src="assets/images/logo/Orange NLC.png" alt="blog">
                                 </div>
                                 <p>Logistics & Cargo Service</p>
                                
