--- a/online.html
+++ b/online.html
@@ -106,7 +106,7 @@
                             </div>
                             <div class="col-lg-2 col-md-6 col-6">
                                 <div class="navbar-header">
-                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo/Black NLC.png" alt="netline cargo logo"></a>
+                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo/Orange NLC.png" alt="netline cargo logo"></a>
 
                                 </div>
                             </div>
@@ -114,7 +114,7 @@
                                 <div id="navbar" class="collapse navbar-collapse navigation-holder">
                                     <button class="menu-close"><i class="ti-close"></i></button>
                                     <ul class="nav navbar-nav mb-2 mb-lg-0">
-                                        <li class="menu-item-has-children"><a href="index.html">Home</a></li>
+                                        <li ><a href="index.html">Home</a></li>
                                         <li class="menu-item-has-children">
                                             <a href="#">Services </a>
                                             <ul class="sub-menu">
@@ -384,7 +384,7 @@
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
                             <div class="widget about-widget">
                                 <div class="logo widget-title">
-                                    <img src="assets/images/logo/Black NLC.png" alt="blog">
+                                    <img src="assets/images/logo/Orange NLC.png" alt="blog">
                                 </div>
                                 <p>Logistics & Cargo Service</p>
                                
